@@ -1,3 +1,10 @@
+20070612
+ - (dtucker) OpenBSD CVS Sync
+  - dtucker@cvs.openbsd.org 2007/06/12 11:56:15
+    [gss-genr.c]
+    Pass GSS OID to gss_display_status to provide better information in
+    error messages.  Patch from Simon Wilkinson via bz 1220.  ok djm@
+
 20070611
  - (djm) Bugzilla #1306: silence spurious error messages from hang-on-exit
    fix; tested by dtucker@ and jochen.kirn AT gmail.com (backport from HEAD)
@@ -2861,4 +2868,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4635.2.10 2007/06/11 04:44:17 dtucker Exp $
+$Id: ChangeLog,v 1.4635.2.11 2007/06/12 13:47:25 dtucker Exp $
